--- a/vue-basic/event-emit.html
+++ b/vue-basic/event-emit.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <title>eventEmit</title>
+    <title>eventEmit page</title>
 </head>
 <body>
     <div id="app">
@@ -19,7 +19,7 @@
             template : '<button v-on:click="passevent">Click Me</button>',
             methods: {
                 passevent: function() {
-                    this.$emit('pass')
+                     this.$emit('pass')
                 }
             }
         }
